# gh-address-cr

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  TERMS.md  apply_all_fixes.py  apply_final_gate_fix.py  fix_batch.py  fix_final_gate.py  fix_telemetry.py  pr_body.md  pyproject.toml  release.config.cjs  superpowers-bridge-report.md
.agents/plugins/: marketplace.json
.gemini_tmp/: reply_thread1.md  reply_thread2.md  reply_thread3.md
.github/ISSUE_TEMPLATE/: ai-agent-feedback.md
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md
.specify/: extension-catalogs.yml  extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/: architecture.md  cli-reference.md  compatibility-inventory.md  development.md  installation.md  migration-3.0.md  troubleshooting.md  workflows.md
docs/adr/: 0001-unified-resolve-surface.md  0002-inline-vs-final-gate-scope.md
docs/contracts/: otel-tracing-v1.md
gh-address-cr/: SKILL.md  runtime-requirements.json
gh-address-cr/agents/: openai.yaml
gh-address-cr/references/: local-review-adapter.md  mode-producer-matrix.md  newcomer-playbook.md
gh-address-cr/scripts/: audit_report.py  batch_github_execute.py  batch_resolve.py  batch_resolve.sh  clean_state.py  clean_state.sh  cli.py  common.sh  control_plane.py  control_plane.sh  cr_loop.py  cr_loop.sh  final_gate.py  ingest_findings.py  mark_handled.py  post_reply.py  prepare_code_review.py  prepare_code_review.sh  publish_finding.py  python_common.py  resolve_thread.py  review_to_findings.sh  run_local_review.py  run_once.py  session_engine.py  submit_feedback.py
plugin/gh-address-cr/: plugin.json
scripts/: benchmark_telemetry_grouping.py  build_plugin_payload.py  check_mypy_ratchet.py  set_package_version.py  sync_scripts.py
scripts/release/: render_homebrew_formula.py
skill/: SKILL.md  runtime-requirements.json
skill/agents/: openai.yaml
skill/references/: agent-protocol.md  completion-contract.md  evidence-ledger.md  feedback.md  local-review-adapter.md  mode-producer-matrix.md  otel-worker-better-stack.md  status-action-map.md
skill/scripts/: batch_resolve.py  clean_state.py  code_review_adapter.py  control_plane.py  cr_loop.py  final_gate.py  generate_reply.py  ingest_findings.py  list_threads.py  mark_handled.py  post_reply.py  prepare_code_review.py  python_common.py  resolve_thread.py  review_to_findings.py  run_local_review.py  run_once.py  session_engine.py  submit_action.py  submit_feedback.py
specs/001-agent-control-plane/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-runtime-native-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-thin-skill-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-agent-orchestrator-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-orchestrator-runtime-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-orchestrator-product-safety/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-cli-distribution/: plan.md  research.md  spec.md  tasks.md
specs/008-cli-version/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-action-request-friction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-reply-template-parity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-dynamic-cr-replies/: data-model.md  plan.md  pr-body.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-agent-efficiency-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-cli-skill-sync/: plan.md  spec.md  tasks.md
specs/013-remove-legacy-compat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-fix-all-thread-replies/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-external-agent-telemetry/: acceptance-matrix.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-runtime-complexity-plateau/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-runtime-kernel/: PR_SCOPE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-cli-health-telemetry/: acceptance-matrix.md  data-model.md  plan.md  quickstart.md  spec.md
specs/019-homogeneous-decline/: plan.md  spec.md
specs/019-resolve-consolidation/: PR_SCOPE.md
specs/020-gate-unification/: PR_SCOPE.md
specs/020-telemetry-decomposition/: decomposition-spec.md  spec.md
specs/021-docs-refinement/: PR_SCOPE.md
specs/022-cleanup/: PR_SCOPE.md
src/gh_address_cr/: cli.py  (+4 more)
tests/: __init__.py  helpers.py  test_agent_protocol.py  test_agent_resolve_guards.py  test_agent_scope_parity.py  test_aux_scripts.py  test_batch_github_execute.py  test_claim_leases.py  test_cli_otel_context.py  test_cli_otel_execution.py  test_cli_otel_genai.py  test_cli_skill_sync_artifacts.py  test_command_runner_otel_span.py  test_complexity_reduction_convergence.py  test_control_plane_fix_all_workflow.py  test_control_plane_workflow.py  test_cr_loop.py  test_disposition_vocabulary.py  test_evaluation_cli.py  test_evidence_ledger.py  test_final_gate.py  test_final_gate_kernel.py  test_findings_input_guard.py  test_findings_intake.py  test_github_thread_state.py  test_homogeneous_decline.py  test_ids.py  test_issue112_batch_next.py  test_issue139_decomposition.py  test_issue142_stale_lease_deadlock.py  test_issue191_architecture.py  test_issue78_agent_experience.py  test_lease_scheduling.py  test_logic_validation.py  test_native_foundation.py  test_native_gate.py  test_native_github.py  test_native_intake.py  test_native_runtime_boundary.py  test_native_session.py  (+28 more)
(+441 files in other folders)
