[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-address-cr"
version = "2.2.1"
description = "Deterministic PR review-resolution control plane runtime."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "rbbtsn0w" }]
keywords = ["ai-agent", "github", "pull-request", "code-review", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "packaging>=24",
]

[project.urls]
Homepage = "https://github.com/RbBtSn0w/gh-address-cr"
Source = "https://github.com/RbBtSn0w/gh-address-cr"
Issues = "https://github.com/RbBtSn0w/gh-address-cr/issues"

[project.scripts]
gh-address-cr = "gh_address_cr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
