[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-address-cr"
version = "3.1.5"
description = "Deterministic PR review-resolution control plane runtime."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "rbbtsn0w" }]
keywords = ["ai-agent", "github", "pull-request", "code-review", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "packaging>=24",
]

[project.optional-dependencies]
dev = [
  "coverage>=7",
  "mypy>=1.8",
  "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/RbBtSn0w/gh-address-cr"
Source = "https://github.com/RbBtSn0w/gh-address-cr"
Issues = "https://github.com/RbBtSn0w/gh-address-cr/issues"

[project.scripts]
gh-address-cr = "gh_address_cr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gh_address_cr = ["runtime-requirements.json"]
"gh_address_cr.core.host_telemetry.profiles" = ["*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# E/F: pyflakes + pycodestyle. B: bugbear (likely-bug patterns).
# I: import sorting. C901: cyclomatic complexity guardrail against new god-functions.
select = ["E", "F", "B", "I", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
# Ratchet target: lower this over time as legacy hot-path functions are decomposed.
max-complexity = 15

[tool.coverage.run]
branch = true
source = ["gh_address_cr"]

[tool.coverage.report]
# Ratchet target: raise as coverage improves. Measured baseline is ~69% (branch).
# Floor set a few points below to absorb cross-environment variance; ratchet up over time.
# NOTE: the CLI subprocess tests (test_python_wrappers) execute in child
# processes and are NOT counted here, so true coverage is higher than reported.
fail_under = 65
skip_covered = false

[tool.mypy]
# Lenient introduction (~55 errors at adoption). CI runs this non-blocking; the
# ratchet is to drive that count to zero, then flip on stricter flags and make it
# blocking. Do not relax further — only tighten.
python_version = "3.10"
files = ["src/gh_address_cr"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
