[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-address-cr"
version = "3.5.8"
description = "Deterministic PR review-resolution control plane runtime."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "rbbtsn0w" }]
keywords = ["ai-agent", "github", "pull-request", "code-review", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "opentelemetry-api>=1.30",
  "opentelemetry-exporter-otlp-proto-http>=1.30",
  "opentelemetry-sdk>=1.30",
  "packaging>=24",
  "requests>=2.7",
]

[project.optional-dependencies]
dev = [
  "coverage>=7",
  "mypy>=1.8",
  "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/RbBtSn0w/gh-address-cr"
Source = "https://github.com/RbBtSn0w/gh-address-cr"
Issues = "https://github.com/RbBtSn0w/gh-address-cr/issues"

[project.scripts]
gh-address-cr = "gh_address_cr.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gh_address_cr = ["runtime-requirements.json"]
"gh_address_cr.core.host_telemetry.profiles" = ["*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# E/F: pyflakes + pycodestyle. B: bugbear (likely-bug patterns).
# I: import sorting. C901: cyclomatic complexity guardrail against new god-functions.
select = ["E", "F", "B", "I", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
# Ratchet target: lower this over time as legacy hot-path functions are decomposed.
max-complexity = 15

[tool.coverage.run]
branch = true
source = ["gh_address_cr"]

[tool.coverage.report]
# Ratchet target: raise as coverage improves. Measured baseline is ~84% (branch) after in-process CLI test routing.
# Floor set a few points below to absorb cross-environment variance.
fail_under = 80
skip_covered = false

[tool.mypy]
# Ratchet complete: error count was driven to zero (#152), so the stricter flags
# are now on and CI runs this as a blocking gate via scripts/check_mypy_ratchet.py
# (baseline 0). This config is the single source of truth for the gate. Do not
# relax further — only tighten.
python_version = "3.10"
files = ["src/gh_address_cr"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = true
